--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React Fundamentals",
   "scripts": {
     "test": "jest",
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
